# asr-server

./: .gitignore  README.md  pyproject.toml
frontend/: index.html
src/asr_server/: __main__.py
