[project]
name = "asr-server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yunho Cho", email = "yhjc2692@gmail.com" }
]
dependencies = [
    "whisperx>=3.1.3",
    "ffmpeg>=1.4",
    "uvicorn>=0.29.0",
    "fastapi>=0.110.2",
    "python-multipart>=0.0.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/asr_server"]
